force-app/main/default/objects/LGF_FieldMapping__c/LGF_FieldMapping__c.object-meta.xml
<CustomObject>
    <label>【LGForce】項目マッピング</label>
    <nameField>
        <label>テンプレート項目名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>