force-app/main/default/objects/LGF_FieldMapping__c/fields/DuplicateCheckField__c.field-meta.xml
<CustomField>
    <fullName>DuplicateCheckField__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Duplicate Check Field</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>