force-app/main/default/objects/LGF_FieldMapping__c/fields/LGF_Template__c.field-meta.xml
<CustomField>
    <fullName>LGF_Template__c</fullName>
    <label>【LGForce】テンプレート</label>
    <referenceTo>LGF_Template__c</referenceTo>
    <relationshipLabel>【LGForce】項目マッピング</relationshipLabel>
    <relationshipName>FieldMappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>